fixed shrinking of nav menu on iphones

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ a {
 }
 
 .header__nav {
+  flex-shrink: 0;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
